objects/Contact_Validation_Rule__c.object
<CustomObject><fields>
        <fullName>Prevent_Setting_Status_Duplicate__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Will prevent changing the Contact Status to Duplicate(Default: True)</inlineHelpText>
        <label>Prevent Setting Status Duplicate</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prevent_Setting_Status_Inactive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Will prevent changing the Contact Status to Inactive (Default: True)</inlineHelpText>
        <label>Prevent Setting Status Inactive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prevent_contact_without_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>will check weather email is required or not for current user's profile</description>
        <label>Prevent contact without Email</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prevent_contact_without_MailingCity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>will check weather current user's profile requires mailing city</description>
        <label>Prevent contact without MailingCity</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prevent_contact_without_MailingCountry__c</fullName>
        <defaultValue>true</defaultValue>
        <description>will check weather current profile requires mailing country or not</description>
        <label>Prevent contact without MailingCountry</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prevent_contact_without_MailingPostalCod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>will see weather MailingPostalCode is required for profile or not</description>
        <label>Prevent contact without MailingPostalCod</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prevent_contact_without_MailingStateCode__c</fullName>
        <defaultValue>true</defaultValue>
        <description>will check weather current profile required mailing code or not</description>
        <label>Prevent contact without MailingStateCode</label>
        <type>Checkbox</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>Flags contained in this setting are referenced in validation rules on the Contact object to allow for applying the rules selectively by profile, user or globally.</description><enableFeeds>false</enableFeeds><label>Contact Validation Rule</label><visibility>Protected</visibility></CustomObject>